# aip-lab

./: LICENSE  README.md
tools/document-extraction-colpali-blip-2/: .env.example  .gitignore  README.md  app.py  colpali_service.py  main.py  pyproject.toml  test-colpali.py  utils.py
